<resources>
    <string name="app_name">My Yamba</string>
    <string name="title_activity_status">Update Status</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="update_et_hint">What\'s on your mind?</string>
    <string name="update_btn_post">Update</string>
    <string name="login">Login</string>
    <string name="get_status">Get Status</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_prefs">Settings</string>
    <string name="titleUsername">User name</string>
    <string name="summaryUsername">Please enter your account user name.</string>
    <string name="titlePassword">Password</string>
    <string name="summaryPassword">Please, enter your account password.</string>
    <string name="titleApiRoot">API Root URL</string>
    <string name="summaryApiRoot">Please specify the service API Root URL. Blank defaults to Twitter.</string>
    <string name="twitter_settings">Twitter</string>
    <string name="titleRefreshRate">Timeline refresh interval</string>
    <string name="summaryRefreshRate">Please, select how often the app should update your timeline</string>
    <string name="everyMinute">Every minute</string>
    <string name="everyFiveMinute">Every five minute</string>
    <string name="halfAnHour">Half an hour</string>
    <string name="everyHour">Every hour</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="login_twitter">Twitter Login</string>
    <string name="btn_ok">Ok</string>
    <string name="logged_in_as">Connected to</string>
    <string name="connect_account">Connect your account</string>
    <string name="snackbar_action_ok">Ok</string>
    <string name="settings_changed">Settings changed. Please, authorize Twitter access.</string>
    <string name="posted_at">posted on</string>
    <string name="say_something">First, type something!</string>
</resources>
