<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="twitter_setting_key"
        android:title="@string/twitter_settings"
        android:persistent="false">
        <EditTextPreference
            android:title="@string/titleUsername"
            android:summary="@string/summaryUsername"
            android:key="twitter_username"></EditTextPreference>
        <!--  <EditTextPreference
              android:title="@string/titlePassword"
              android:password="true"
              android:summary="@string/summaryPassword"
              android:key="password"></EditTextPreference>-->
        <EditTextPreference
            android:title="@string/titleApiRoot"
            android:summary="@string/summaryApiRoot"
            android:key="twitter_apiRoot"
            android:defaultValue=""></EditTextPreference>
    </PreferenceScreen>
</PreferenceScreen>
