<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.largerlife.learndroid.myyamba.StatusActivity">
    <!--    <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_person_white_48dp"
            android:title="@string/get_status"
            android:orderInCategory="100"
            mApplication:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/menu_authorize"
        android:icon="@drawable/ic_link_variant_white_48dp"
        android:orderInCategory="200"
        android:title="@string/login" />
    <item
        android:id="@+id/menu_start_service"
        android:orderInCategory="300"
        android:title="@string/start_service" />
    <item
        android:id="@+id/menu_stop_service"
        android:orderInCategory="400"
        android:title="@string/stop_service" />
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="500"
        android:title="@string/refresh" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="500"
        android:title="@string/title_activity_prefs" />
</menu>
