<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.largerlife.learndroid.myyamba.TimelineActivity">
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_prefs"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
    <item
        android:id="@+id/menu_authorize"
        android:icon="@drawable/ic_link_variant_white_48dp"
        android:orderInCategory="200"
        android:title="@string/login"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white_48dp"
        android:orderInCategory="300"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
</menu>
